--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -61,7 +61,9 @@
             'программа',
             'макака',
             'прекрасный',
-            'оладушек'
+            'оладушек',
+            'ручка',
+            'дверь'
         ];
         let word = words[Math.floor(Math.random() * words.length)];
 
