--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -63,7 +63,8 @@
             'прекрасный',
             'оладушек',
             'ручка',
-            'дверь'
+            'дверь',
+            'стол'
         ];
         let word = words[Math.floor(Math.random() * words.length)];
 
