--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -64,8 +64,8 @@
             'оладушек',
             'ручка',
             'дверь',
-            'стол',
-            'кухня'
+            'стол'
+            
         ];
         let word = words[Math.floor(Math.random() * words.length)];
 
