--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -64,7 +64,8 @@
             'оладушек',
             'ручка',
             'дверь',
-            'стол'
+            'стол',
+            'кухня'
             
         ];
         let word = words[Math.floor(Math.random() * words.length)];
