--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -65,7 +65,8 @@
             'ручка',
             'дверь',
             'стол',
-            'кухня'
+            'кухня',
+            'глобус'
             
         ];
         let word = words[Math.floor(Math.random() * words.length)];
