--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -66,7 +66,8 @@
             'дверь',
             'стол',
             'кухня',
-            'глобус'
+            'глобус',
+            'бутылка'
             
         ];
         let word = words[Math.floor(Math.random() * words.length)];
