--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -67,7 +67,8 @@
             'стол',
             'кухня',
             'глобус',
-            'бутылка'
+            'бутылка',
+            'банка'
             
         ];
         let word = words[Math.floor(Math.random() * words.length)];
