--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -68,7 +68,8 @@
             'кухня',
             'глобус',
             'бутылка',
-            'банка'
+            'банка',
+            'крышка'
             
         ];
         let word = words[Math.floor(Math.random() * words.length)];
