--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -69,7 +69,8 @@
             'глобус',
             'бутылка',
             'банка',
-            'крышка'
+            'крышка',
+            'стакан'
             
         ];
         let word = words[Math.floor(Math.random() * words.length)];
