--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -70,7 +70,8 @@
             'бутылка',
             'банка',
             'крышка',
-            'стакан'
+            'стакан',
+            'пульт'
             
         ];
         let word = words[Math.floor(Math.random() * words.length)];
