--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -71,7 +71,8 @@
             'банка',
             'крышка',
             'стакан',
-            'пульт'
+            'пульт',
+            'телефон'
             
         ];
         let word = words[Math.floor(Math.random() * words.length)];
