--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -72,7 +72,8 @@
             'крышка',
             'стакан',
             'пульт',
-            'телефон'
+            'телефон',
+            'труба'
             
         ];
         let word = words[Math.floor(Math.random() * words.length)];
