--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -73,7 +73,8 @@
             'стакан',
             'пульт',
             'телефон',
-            'труба'
+            'труба',
+            'пирог'
             
         ];
         let word = words[Math.floor(Math.random() * words.length)];
