--- a/9. Пишем виселицу.html
+++ b/9. Пишем виселицу.html
@@ -73,8 +73,8 @@
             'стакан',
             'пульт',
             'телефон',
-            'труба',
-            'пирог'
+            'труба'
+            
             
         ];
         let word = words[Math.floor(Math.random() * words.length)];
